updated exercise with final answer

--- a/data_types_and_variables.ipynb
+++ b/data_types_and_variables.ipynb
@@ -217,11 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "494712d0-523c-4b30-858f-ec939f2dadf4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "username = '' \n",
+    "password = ''\n",
+    "username == len(username) <= 20\n",
+    "password == (len(password) >= 5) and (password != username)"
+   ]
   },
   {
    "cell_type": "code",
