--- a/data_types_and_variables.ipynb
+++ b/data_types_and_variables.ipynb
@@ -2,9 +2,193 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8a8663c3-64c8-4047-8571-3063595446bd",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(99.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fcb071ca-f0cf-4184-ba4a-55cc528e330c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(\"False\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1a1a8cfc-b5d6-4e6f-86ce-a019345a2d2c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6d44dd9f-ad7d-4816-be68-cae2e93b3e56",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type('0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c6b6c9a2-eee3-40be-bce9-6f7b04692ea7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cc9e40f9-1511-422a-986f-8e6c5f9125dd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0e2ad5a7-8710-4df8-9764-1b68688e7d5d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type('True')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ad290c8d-f121-4af8-b281-535301ea0c2f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type([{}])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "84571312-8050-40e1-8487-5f67647df7c3",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -12,26 +196,18 @@
        "dict"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(99.9)\n",
-    "type(\"False\")\n",
-    "type(False)\n",
-    "type('0')\n",
-    "type(0)\n",
-    "type(True)\n",
-    "type('True')\n",
-    "type([{}])\n",
     "type({'a': []})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3a7a33af-3636-4101-95dc-0d87be890c51",
    "metadata": {
     "tags": []
@@ -97,7 +273,7 @@
     "brother_bear = 5\n",
     "hercules = 1\n",
     "rent = 3\n",
-    "rent * (brother_bear + hercules + rent)"
+    "rent * (brother_bear + hercules + the_little_mermaid)"
    ]
   },
   {
@@ -222,10 +398,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "username = '' \n",
-    "password = ''\n",
-    "username == len(username) <= 20\n",
-    "password == (len(password) >= 5) and (password != username)"
+    "username = 'codeup' \n",
+    "password = 'notapassword'\n",
+    "username_conditions == len(username) <= 20\n",
+    "password_conditions == (len(password) >= 5) and (password != username)\n",
+    "requested_conditions = username_conditions and password_conditions"
    ]
   },
   {
