--- a/control_structures_exercises.ipynb
+++ b/control_structures_exercises.ipynb
@@ -97,7 +97,7 @@
     "if hours_worked <= 40:\n",
     "    weekly_paycheck = hours_worked * hourly_rate\n",
     "elif hours_worked > 40:\n",
-    "    weekly_paycheck = 2000 + ((hours_worked - 40) * (hourly_rate * 1.5))\n",
+    "    weekly_paycheck = (hourly_rate * 40) + ((hours_worked - 40) * (hourly_rate * 1.5))\n",
     "print(weekly_paycheck)\n",
     "\n"
    ]
@@ -458,7 +458,11 @@
     "\n",
     "while counter > 0:\n",
     "    print(counter)\n",
-    "    counter -= 1"
+    "    counter -= 1\n",
+    "\n",
+    "    #teacher's version: way quicker\n",
+    "#for i in range(numb, 0, -1):\n",
+    "#    print(i)"
    ]
   },
   {
@@ -504,7 +508,11 @@
     "\n",
     "while counter <= user_input:\n",
     "    print(counter)\n",
-    "    counter += 1\n"
+    "    counter += 1\n",
+    "    \n",
+    "#teacher's version: way quicker\n",
+    "#for i in range(numb+1):\n",
+    "#    print(i)"
    ]
   },
   {
@@ -553,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 36,
    "id": "6eed962a-03d3-4ddf-b2e7-a2507615b117",
    "metadata": {
     "tags": []
@@ -563,40 +571,21 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Give me an odd integer between 1 and 50:  11\n"
+      "Give me an odd integer between 1 and 50:  60\n",
+      "Give me a 'ODD' integer between 1 and 50:  61\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number to skip is : 11\n",
-      "Here is an odd number: 1\n",
-      "Here is an odd number: 3\n",
-      "Here is an odd number: 5\n",
-      "Here is an odd number: 7\n",
-      "Here is an odd number: 9\n",
-      "Yikes! Skipping number: 11\n",
-      "Here is an odd number: 11\n",
-      "Here is an odd number: 13\n",
-      "Here is an odd number: 15\n",
-      "Here is an odd number: 17\n",
-      "Here is an odd number: 19\n",
-      "Here is an odd number: 21\n",
-      "Here is an odd number: 23\n",
-      "Here is an odd number: 25\n",
-      "Here is an odd number: 27\n",
-      "Here is an odd number: 29\n",
-      "Here is an odd number: 31\n",
-      "Here is an odd number: 33\n",
-      "Here is an odd number: 35\n",
-      "Here is an odd number: 37\n",
-      "Here is an odd number: 39\n",
-      "Here is an odd number: 41\n",
-      "Here is an odd number: 43\n",
-      "Here is an odd number: 45\n",
-      "Here is an odd number: 47\n",
-      "Here is an odd number: 49\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m     odd_num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGive me a \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mODD\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m integer between 1 and 50: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m odd_num \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m50\u001b[39m:\n\u001b[0;32m----> 9\u001b[0m     odd_num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGive me a SMALLER odd integer, between 1 and 50: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m odd_num \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m     11\u001b[0m     odd_num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGive me a LARGER odd integer, between 1 and 50: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.11/site-packages/ipykernel/kernelbase.py:1175\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1171\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_allow_stdin:\n\u001b[1;32m   1172\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[1;32m   1173\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1174\u001b[0m     )\n\u001b[0;32m-> 1175\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_input_request(\n\u001b[1;32m   1176\u001b[0m     \u001b[38;5;28mstr\u001b[39m(prompt),\n\u001b[1;32m   1177\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent_ident[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m   1178\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_parent(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[1;32m   1179\u001b[0m     password\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m   1180\u001b[0m )\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.11/site-packages/ipykernel/kernelbase.py:1217\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1214\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m   1215\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1216\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m-> 1217\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1218\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m   1219\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
@@ -605,7 +594,7 @@
     "odd_num = int(input(\"Give me an odd integer between 1 and 50: \"))\n",
     "limit = odd_num\n",
     "\n",
-    "while odd_num <= 50:\n",
+    "while True:\n",
     "    if odd_num % 2 == 0:\n",
     "        odd_num = int(input(\"Give me a 'ODD' integer between 1 and 50: \"))\n",
     "    elif odd_num > 50:\n",
@@ -620,8 +609,7 @@
     "            if counter == odd_num:\n",
     "                print(f\"Yikes! Skipping number: {counter}\")\n",
     "                continue\n",
-    "        break\n",
-    "#I thought continue was supposed to make it skip the integer's iteration"
+    "        break\n"
    ]
   },
   {
@@ -1075,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 41,
    "id": "8b1fff8f-98e3-4e98-b704-f03170470a72",
    "metadata": {
     "tags": []
@@ -1085,56 +1073,28 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Give me a numerical grade from 0 to 100:  34\n"
+      "Give me a numerical grade from 0 to 100:  99\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The letter grade is: F\n"
+      "The letter grade is: A\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "If you have another grade, please enter a numerical grade from 0 to 100. Else, type -1:  32\n"
+      "If you have another grade, please enter a numerical grade from 0 to 100. Else, type 101:  101\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The letter grade is: F\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "If you have another grade, please enter a numerical grade from 0 to 100. Else, type -1:  34\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The letter grade is: F\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "If you have another grade, please enter a numerical grade from 0 to 100. Else, type -1:  -1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The letter grade is: F\n"
+      "Goodbye\n"
      ]
     }
    ],
@@ -1168,8 +1128,8 @@
     "\n",
     "#Prompt the user to continue\n",
     "\n",
-    "while grade != -1:\n",
-    "    grade = int(input(\"If you have another grade, please enter a numerical grade from 0 to 100. Else, type -1: \"))\n",
+    "while grade != 101:\n",
+    "    grade = int(input(\"If you have another grade, please enter a numerical grade from 0 to 100. Else, type 101: \"))\n",
     "    if grade >= 88 and grade <=100:\n",
     "        print(\"The letter grade is: A\")\n",
     "    elif grade >= 80 and grade <=87:\n",
@@ -1178,8 +1138,10 @@
     "        print(\"The letter grade is: C\")\n",
     "    elif grade >= 60 and grade <=66:\n",
     "        print(\"The letter grade is: D\")\n",
+    "    elif grade >= 0 and grade <=59:\n",
+    "        print(\"The letter grade is: D\")\n",
     "    else:\n",
-    "        print(\"The letter grade is: F\")\n",
+    "        print(\"Goodbye\")\n",
     "\n",
     "\n",
     "\n",
@@ -1199,6 +1161,91 @@
     "\n",
     "#Prompt the user to enter a genre, then loop through your books list and print out the titles of all the books in that genre."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "707d6823-24a0-4f04-b284-ba05791fbfe2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Name': 'Way of Kings', 'Author': 'Brandon Sanderson', 'Genre': 'Epic Fantasy'}\n",
+      "{'Name': 'The Dragon Reborn', 'Author': 'Robert Jordan', 'Genre': 'Epic Fantasy'}\n",
+      "{'Name': 'Extreme Ownership', 'Author': 'Jocko Willink', 'Genre': 'Nonfiction'}\n",
+      "{'Name': 'Cant Hurt Me', 'Author': 'David Goggins', 'Genre': 'Self-Help'}\n",
+      "{'Name': 'Dune', 'Author': 'Frank Herbert', 'Genre': 'Science Fiction'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#keys title, author, and genre\n",
+    "books_i_read = [{'Name': 'Way of Kings', \"Author\":'Brandon Sanderson', 'Genre': 'Epic Fantasy'}, \n",
+    "                {'Name': 'The Dragon Reborn', 'Author': 'Robert Jordan', 'Genre': 'Epic Fantasy'}, \n",
+    "                {'Name': 'Extreme Ownership', 'Author': 'Jocko Willink', 'Genre': 'Nonfiction'}, \n",
+    "                {'Name': 'Cant Hurt Me', 'Author': 'David Goggins', 'Genre': 'Self-Help'}, \n",
+    "                {'Name': 'Dune', 'Author': 'Frank Herbert', 'Genre': 'Science Fiction'}]\n",
+    "\n",
+    "for key in books_i_read:\n",
+    "    print(key)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "4e7fb528-4128-465b-8663-6d813738df7c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a book genre:  Epic Fantasy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Way of Kings\n",
+      "The Dragon Reborn\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Prompt the user to enter a genre, then loop through your books list and print out the titles of all the books in that genre.\n",
+    "\n",
+    "books_i_read = [{'Name': 'Way of Kings', \"Author\":'Brandon Sanderson', 'Genre': 'Epic Fantasy'}, \n",
+    "                {'Name': 'The Dragon Reborn', 'Author': 'Robert Jordan', 'Genre': 'Epic Fantasy'}, \n",
+    "                {'Name': 'Extreme Ownership', 'Author': 'Jocko Willink', 'Genre': 'Nonfiction'}, \n",
+    "                {'Name': 'Cant Hurt Me', 'Author': 'David Goggins', 'Genre': 'Self-Help'}, \n",
+    "                {'Name': 'Dune', 'Author': 'Frank Herbert', 'Genre': 'Science Fiction'}]\n",
+    "\n",
+    "genre_request = input(\"Enter a book genre: \" )\n",
+    "\n",
+    "\n",
+    "for item in books_i_read:    \n",
+    "    if genre_request == item['Genre']:\n",
+    "        print(item['Name'])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e98f261-c544-4390-b788-9942ce0213cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
