--- a/function_exercises.ipynb
+++ b/function_exercises.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 51,
    "id": "1cd9972e-4836-44d8-b9da-3daccf66f2ac",
    "metadata": {
     "tags": []
@@ -310,7 +310,15 @@
     "#and return a number as output.\n",
     "\n",
     "def handle_commas(string):\n",
-    "    \n",
+    "    a = []\n",
+    "    for s in string:\n",
+    "        a.append(s)\n",
+    "    for index, n in enumerate(a):\n",
+    "        if n == \",\":\n",
+    "            a[index] = \"_\"\n",
+    "    numb = ''.join(map(str, a))\n",
+    "    print(numb)\n",
+    "        \n",
     "\n",
     "#you can do a for loop that recognizes commas and replaces them with underscores or removes them outright\n",
     "# print(string.replace(',', '_'))"
@@ -318,20 +326,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 52,
    "id": "740b7f6b-be8b-49e2-beca-0495de7bf932",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "handle_commas(\"5000\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "id": "583d0c6b-4dd4-49f8-9054-30a02e505ecc",
    "metadata": {
     "tags": []
    },
@@ -340,7 +336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5,000\n"
+      "5_000\n"
      ]
     }
    ],
@@ -350,8 +346,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
+   "id": "583d0c6b-4dd4-49f8-9054-30a02e505ecc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3_586_394\n"
+     ]
+    }
+   ],
+   "source": [
+    "handle_commas(\"3,586,394\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "894cb59c-6f36-40b0-a3cf-9cad65c28261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define a function named get_letter_grade. It should accept a number and \n",
+    "#return the letter grade associated with that number (A-F)\n",
+    "\n",
+    "def get_letter_grade(num):\n",
+    "    grade = ''\n",
+    "    if num in range(60):\n",
+    "        grade = \"F\"\n",
+    "    elif num in range(61,69):\n",
+    "        grade = \"D\"\n",
+    "    elif num in range(70,79):\n",
+    "        grade = \"C\"\n",
+    "    elif num in range(80,89):\n",
+    "        grade = \"B\"\n",
+    "    else:\n",
+    "        grade = \"A\"\n",
+    "    print(grade)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "098c6f0f-5740-43db-bbf7-51e9fa8c4a26",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_letter_grade(77)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f549ef6e-2d8f-4b8d-a1b7-0a8fc785ecd8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_letter_grade(95)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "89fbad54-99a5-4f2c-b851-fdeaeef8fd20",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#Define a function named remove_vowels that accepts a string and returns a \n",
+    "#string with all the vowels removed\n",
+    "\n",
+    "def remove_vowels(string):\n",
+    "    a = []\n",
+    "    vowels = [\"a\", \"e\", \"i\", \"o\", \"u\"]\n",
+    "    for letter in string:\n",
+    "        if letter not in vowels:\n",
+    "            a.append(letter)\n",
+    "    final_string = ''.join(a)\n",
+    "    return final_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3169003-49a8-4014-b94c-c5f102fd556e",
    "metadata": {},
    "outputs": [],
    "source": []
