--- a/function_exercises.ipynb
+++ b/function_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 192,
    "id": "896fa584-c24d-4330-8908-b34b9e995091",
    "metadata": {
     "tags": []
@@ -12,15 +12,20 @@
     "#Define a function named is_two. It should accept one input and return True if the passed input is either the number or the string 2, False otherwise\n",
     "\n",
     "def is_two(char):\n",
-    "    if char == 2 or char == two:\n",
+    "    if char in (2, '2', 2.0):\n",
     "        return True\n",
     "    else:\n",
-    "        return False\n"
+    "        return False\n",
+    "    #teacher example\n",
+    "    #if n in (2, '2', 2.0):\n",
+    "    #    return True\n",
+    "    #else:\n",
+    "    #    return False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 193,
    "id": "b1b5221a-75c7-4715-bf42-87ce782e326a",
    "metadata": {
     "tags": []
@@ -32,7 +37,7 @@
        "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 194,
    "id": "78c36182-b92f-4ac1-8937-3881a2dbbdd3",
    "metadata": {
     "tags": []
@@ -55,7 +60,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 196,
    "id": "3641698c-49bd-4281-8628-f862173e71a6",
    "metadata": {
     "tags": []
@@ -78,13 +83,13 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_two(two)"
+    "is_two(2.0)"
    ]
   },
   {
@@ -104,7 +109,26 @@
     "        if string in vowels:\n",
     "            return True\n",
     "        else:\n",
-    "            return False"
+    "            return False\n",
+    "        \n",
+    "    #teacher example    \n",
+    "def is_vowel(somestring):\n",
+    "    #check that the arg is a str\n",
+    "    if type(somestring) == str:\n",
+    "        \n",
+    "        # if the str is 1 char and a letter\n",
+    "        if len(somestring) == 1 and somestring.isalpha():\n",
+    "            \n",
+    "            #return bool ans to: lower-letter in vowel list?\n",
+    "            return somestring.lower() in list('aeiou')\n",
+    "        \n",
+    "        #return false if string fails 1 alpha-char length\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    # returns false if input is not a str    \n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
@@ -147,7 +171,26 @@
     "        if string not in vowels:\n",
     "            return True\n",
     "        else:\n",
-    "            return False"
+    "            return False\n",
+    "        \n",
+    "def is_consonant(somestring):\n",
+    "    \"\"\"\n",
+    "    This function will:\n",
+    "    - intially check the input is a string\n",
+    "        - and 1 char long\n",
+    "        - and a letter\n",
+    "            -if true, returns the opposite return of is_vowel, using the NOT operator\n",
+    "            - False otherwise\n",
+    "    -returns False if not a string\n",
+    "    \"\"\"\n",
+    "    if type(somestring) == str:\n",
+    "        if len(somestring) == 1 and somestring.isalpha():\n",
+    "            return (not is_vowel(somestring))\n",
+    "        else:\n",
+    "            return False\n",
+    "    else: \n",
+    "        return False\n",
+    "       \n"
    ]
   },
   {
@@ -191,7 +234,25 @@
     "        x = string.capitalize()\n",
     "        print(x)\n",
     "    else:\n",
-    "        return False"
+    "        return False\n",
+    "    \n",
+    "#Teacher edition\n",
+    "#def capitalize_starting_consonant(word):\n",
+    "#    \"\"\"\n",
+    "#    This function will initially check if:\n",
+    "#    - input is a str\n",
+    "#        - checks if 1st char of the input is a consonant\n",
+    "#            - if True, returns the inputted string w/1st char Capitalized\n",
+    "#            - False otherwise\n",
+    "#        - returns False if not a string\n",
+    "#    \"\"\"\n",
+    "#    if type(word) == str:\n",
+    "#        if is_consonant(word[0]):\n",
+    "#            return word.capitalize()\n",
+    "#        else:\n",
+    "#            return f\"{word} doesn't start with a consonant.\"\n",
+    "#    else:\n",
+    "#        return f\"{word} isn't a string.\""
    ]
   },
   {
@@ -299,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 182,
    "id": "1cd9972e-4836-44d8-b9da-3daccf66f2ac",
    "metadata": {
     "tags": []
@@ -317,27 +378,46 @@
     "        if n == \",\":\n",
     "            a[index] = \"_\"\n",
     "    numb = ''.join(map(str, a))\n",
-    "    print(numb)\n",
-    "        \n",
+    "    return numb\n",
     "\n",
-    "#you can do a for loop that recognizes commas and replaces them with underscores or removes them outright\n",
-    "# print(string.replace(',', '_'))"
+    "#Teacher edition\n",
+    "def handle_commas(fakenum):\n",
+    "    \"\"\"\n",
+    "    This function will:\n",
+    "    - check if input is a string\n",
+    "        -removes any commas\n",
+    "        -check if the stripped input is a digit\n",
+    "            - if True, returns input as an integer\n",
+    "            -False otherwise\n",
+    "    - if not a string, returns false stmt\n",
+    "    \"\"\"\n",
+    "    if type(fakenum) == str:\n",
+    "        stripfakenum = fakenum.replace(\",\", \"\")\n",
+    "        if stripfakenum.isdigit():\n",
+    "            return int(stripfakenum)\n",
+    "        else:\n",
+    "            return False\n",
+    "    else:\n",
+    "        False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 183,
    "id": "740b7f6b-be8b-49e2-beca-0495de7bf932",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5_000\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'5_000'"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -346,18 +426,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 184,
    "id": "583d0c6b-4dd4-49f8-9054-30a02e505ecc",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3_586_394\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'3_586_394'"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -432,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 186,
    "id": "89fbad54-99a5-4f2c-b851-fdeaeef8fd20",
    "metadata": {
     "tags": []
@@ -449,13 +532,184 @@
     "        if letter not in vowels:\n",
     "            a.append(letter)\n",
     "    final_string = ''.join(a)\n",
-    "    return final_string"
+    "    return final_string\n",
+    "\n",
+    "#teacher edition\n",
+    "#    def remove_vowels(word):\n",
+    "#        new_word = ''\n",
+    "#        for letter in word:\n",
+    "#            if not is_vowel(letter):\n",
+    "#                new_word += letter\n",
+    "#                return new_word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "6b9bbe64-e040-4cd7-801e-4467d858c360",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'lbstr'"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_vowels(\"alabaster\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "b3169003-49a8-4014-b94c-c5f102fd556e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define a function named normalize_name\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "#Teacher edition\n",
+    "def normalize_name(somestring):\n",
+    "    # intialize an empty string called newstring\n",
+    "    newstring = \"\"\n",
+    "    \n",
+    "    # Iterate over each char in somestring after removing leading & trailing whitespace\n",
+    "    for letter in somestring.strip():\n",
+    "        \n",
+    "        # check if the char is alphanum or a space\n",
+    "        if letter.isalnum() or letter == \" \":\n",
+    "            \n",
+    "            #if it is, append ch to the newstring\n",
+    "            newstring += letter\n",
+    "    # iterate over ea char in the newstring\n",
+    "    for letter in newstring:\n",
+    "        #check if the char is alphabetic\n",
+    "        if letter.isalpha():\n",
+    "            #if alpha char is found, exit the loop\n",
+    "            break\n",
+    "        else:\n",
+    "            #if the char is not alphanum, remove it from the beginning of the newstring\n",
+    "            newstring = newstring[1:]\n",
+    "            \n",
+    "    #convert the newstring to lowercase & replace any spaces with underscores\n",
+    "    #then return the mod newstring as the result\n",
+    "    return newstring.lower().replace(\" \", \"_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "55db3eae-d50d-4313-a5cf-9303286d64ba",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'king'"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_name(\"5King\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "3684f994-5bca-4f7e-a757-5627bf6cc246",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'king_v500'"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_name(\"5King, V50<0 \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "369d1482-9161-4c7c-9c37-d71cf2a345b6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#Write a function named cumulative_sum that accepts a list of numbers and returns a list that is the cumulative \n",
+    "#sum of the numbers in the list.\n",
+    "#\n",
+    "#cumulative_sum([1, 1, 1]) returns [1, 2, 3]\n",
+    "#cumulative_sum([1, 2, 3, 4]) returns [1, 3, 6, 10]\n",
+    "\n",
+    "def cumulative_sum(oldlist):\n",
+    "    \n",
+    "    newlist= []\n",
+    "    c_sum = 0\n",
+    "    for num in oldlist:\n",
+    "        c_sum += num\n",
+    "        #print(f\"cumulative: {c_sum}\")\n",
+    "        newlist.append(c_sum)\n",
+    "        #print(f\"newlist: {newlist}\")\n",
+    "    return newlist\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "ce684838-91e5-4337-a314-99262ae21e93",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 9, 11]"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cumulative_sum([3,6,2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3169003-49a8-4014-b94c-c5f102fd556e",
+   "id": "662ffc36-b974-4461-a38c-643322a1f6ae",
    "metadata": {},
    "outputs": [],
    "source": []
